<resources>
    <string name="app_name">MyMovieList</string>
    <string name="search">Cari apa</string>
    <string name="searchbar_hint">Cari movie…</string>
    <string name="profile_picture">Foto Profile</string>
    <string name="title">title</string>
    <string name="name">name</string>
    <string name="movie_info">Movie info</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="dot">•</string>
    <string name="company">company</string>
    <string name="back_button">back button</string>
    <string name="bio">bio</string>
    <string name="website">web</string>
    <string name="twitter">twitter</string>
    <string name="location">location</string>
    <string name="no_users_found">No user found</string>
    <string name="tabs">tabs</string>
    <string name="followers_count">100 </string>
    <string name="following_count">100</string>
    <string name="github_icon">Github Icon</string>
    <string name="genre">Genre : </string>
    <string name="runtime">24 min</string>
    <string name="country">country</string>
    <string name="year">year</string>
    <string name="awards">Awards</string>
    <string name="score">Score</string>
    <string name="rating">rating</string>
    <string name="vote">vote</string>
    <string name="plot">Plot</string>
    <string name="open_in_imdb">Open in IMDb</string>
    <string name="plot_desc">\"Set in the late 1960s decade of Japan and follows the rivalry between Manpyo Daisuke, a powerful banker, and his eldest son, Manpyo Teppei, the executive managing director of a steel firm.\"</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="type">type</string>
    <string name="title_popcorn">MyMovieList 🍿</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="info">info</string>
    <string name="about">About</string>
</resources>